<resources>
    <string name="app_name">FT Bafang M820</string>
    <string name="scan_title">Fake Taxi App for M820</string>
    
    <string name="scan_start">SCAN</string>
    <string name="scan_stop">Stop Scan</string>
    <string name="disconnect">Disconnect</string>
    <string name="controller">Controller</string>
    <string name="display">Display</string>
    <string name="assist">Assist</string>
    <string name="assist_title">Assist</string>
    <string name="assist_summary_empty">No assist data loaded</string>
    <string name="assist_summary_loading">Loading assist data...</string>
    <string name="assist_summary_loaded">Assist data ready: 5 levels</string>
    <string name="update_assist">Update Assist</string>
    <string name="assist_global_title">Global</string>
    <string name="assist_levels_title">Assist Levels</string>
    <string name="acceleration">Acceleration</string>
    <string name="motor_angle">Motor Angle</string>
    <string name="assist_level">Assist Level</string>
    <string name="motor_power_limit">Motor Power Limit</string>
    <string name="assist_update_sent">Assist update sent</string>
    <string name="assist_no_data">No assist data to update</string>
    <string name="controller_summary_empty">Controller: N/A</string>
    <string name="display_summary_empty">Display: N/A</string>
    <string name="light">Light</string>
    <string name="update">Update</string>
    <string name="send_test_cmd">Send Test Cmd</string>
    <string name="light_on">Light On</string>
    <string name="light_off">Light Off</string>
    <string name="log_label">Communication Log:</string>
    <string name="status_scanning">Scanning...</string>
    <string name="status_connecting">Connecting to %1$s...</string>
    <string name="status_connected">Status: Connected to %1$s</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="status_failed">Status: Failed</string>
    <string name="permissions_required">Bluetooth and Location permissions are required to scan for devices.</string>
    <string name="permissions_denied">Permissions denied. Cannot scan for devices.</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="connecting">Connecting</string>
    <string name="scan_stopped">Scan Stopped</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="failed">Failed</string>
    <string name="status_connected_permission_missing">No permission</string>
    <string name="level_e">E</string>
    <string name="level_t">T</string>
    <string name="level_s">S</string>
    <string name="level_sp">S+</string>
    <string name="level_b">B</string>
    <string name="save_preset">Save Preset</string>
    <string name="load_preset">Load Preset</string>
    <string name="preset_name_hint">Preset name</string>
    <string name="preset_name_exists">Preset \"%1$s\" already exists.</string>
    <string name="overwrite_preset">Overwrite existing preset?</string>
    <string name="preset_saved">Preset saved</string>
    <string name="preset_loaded">Preset loaded</string>
    <string name="preset_deleted">Preset deleted</string>
    <string name="no_presets">No saved presets</string>
    <string name="delete_preset_title">Delete preset</string>
    <string name="confirm_delete_preset">Delete \"%1$s\"?</string>
    <string name="confirm_delete">Delete</string>
    <string name="preset_save_title">Save preset</string>
    <string name="preset_load_title">Load preset</string>
    <string name="preset">Preset</string>
    <string name="preset_load">Load</string>
    <string name="preset_add_new">Add new preset</string>
    <string name="preset_export">Export</string>
    <string name="preset_import">Import</string>
    <string name="preset_export_title">Export presets</string>
    <string name="preset_import_title">Import presets</string>
    <string name="preset_none_selected">Nothing selected</string>
    <string name="preset_export_done">Presets exported</string>
    <string name="preset_export_failed">Export failed</string>
    <string name="preset_import_failed">Could not read file</string>
    <string name="preset_import_empty">No presets in file</string>
    <string name="preset_import_done">Imported %d preset(s)</string>
    <string name="reset">Reset</string>
    <string name="ride_log_start">Log</string>
    <string name="ride_log_stop">Stop</string>
    <string name="ride_log_folder_required">Wybierz folder logow</string>
    <string name="ride_log_folder_cancelled">Nie wybrano folderu logow</string>
    <string name="ride_log_folder_permission_failed">Brak zgody na zapis w tym folderze</string>
    <string name="system_info">System</string>
    <string name="live_data">Live Data</string>
    <string name="refresh">Odśwież</string>
    <string name="speed">Prędkość</string>
    <string name="battery">Bateria</string>
    <string name="controller_temp">Sterownik</string>
    <string name="motor_temp">Silnik</string>
    <string name="disclaimer_title">Uwaga</string>
    <string name="disclaimer_message">Ta aplikacja dzia\u0142a wy\u0142\u0105cznie z:\n\n\u2022 Softem FAKE TAXI 2026.05.22\n\u2022 Motorem Bafang M820\n\nAutorzy: maglo18, rekrezeb, mdi, Radolf\n\nKorzystasz na w\u0142asne ryzyko.</string>
    <string name="info_label">FAKE TAXI M820</string>
</resources>
